docs(readme): 重构并丰富README文档内容
- 重新组织README结构，增加目录层级和图标标识提高可读性
- 详细补充核心功能介绍，包括高性能加载、搜索、过滤、分析等
- 全面更新使用方法，增加快捷操作步骤和界面按钮说明
- 补充开发调试环境要求、安装使用流程和打包发布说明
- 完善项目结构介绍，补全文件说明信息
- 新增技术实现细节，涵盖前端、后端和核心算法
- 添加性能表现数据和注意事项提示
- 增加后续优化计划和贡献指引
- 更新License和作者信息，增加相关链接
- 美化内容排版，统一全角半角符号和语言表达

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -5,3 +5,9 @@ src/**/*.ts
 tsconfig.json
 **/*.map
 test_sample.log
+.git/**
+.eslintrc.json
+PUBLISH_GUIDE.md
+QUICKSTART.md
+node_modules/**/.bin/**
+**/*.vsix
