--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "big-log-viewer",
   "displayName": "大日志文件查看器",
   "description": "专业的大日志文件查看和处理工具，支持虚拟滚动、智能搜索、时间过滤、级别过滤、折叠重复日志等功能",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "publisher": "wake",
   "icon": "icon.png",
@@ -71,7 +71,14 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile",
-    "lint": "eslint src --ext ts"
+    "lint": "eslint src --ext ts",
+    "build": "npm run compile",
+    "dev": "npm run watch",
+    "clean": "rimraf out",
+    "rebuild": "npm run clean && npm run compile",
+    "package": "vsce package",
+    "publish": "vsce publish",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
@@ -79,7 +86,9 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "@vscode/vsce": "^2.22.0",
+    "rimraf": "^5.0.0"
   },
   "dependencies": {}
 }
