feat(core): 添加自定义高亮规则及筛选功能
- 替换日志方法名提取正则，支持 [methodName:lineNumber] 格式
- 优化线程名提取，排除方法名标识，精确识别线程名
- 增加自定义高亮规则弹窗，支持文本和正则匹配
- 自定义规则支持高亮颜色配置及启用状态管理
- 规则高亮支持点击事件，实现按线程名、类名、方法名筛选功能
- 新增筛选状态提示面板，显示当前筛选条件并支持清除筛选
- 重构数据变更统一处理函数，优化分页、折叠和异步计算流程
- 美化按钮风格及新增更多操作菜单，提升界面交互体验
- 移除部分硬编码背景色，改用VSCode变量以增强主题适配
- 优化关键词高亮逻辑，兼容自定义高亮及搜索关键字的叠加显示
- 新增自定义确认对话框组件，通用用于规则删除等确认操作

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "build": "npm run compile",
     "dev": "npm run watch",
     "clean": "rimraf out",
-    "rebuild": "npm run clean && npm run compile",
+    "rebuild": "npm run clean; npm run compile",
     "package": "vsce package",
     "publish": "vsce publish"
   },
