feat(log-viewer): 新增多项日志查看器功能命令
- 新增刷新日志文件命令，支持重新加载当前日志
- 添加导出当前日志命令，提示用户在界面操作导出
- 实现显示日志统计命令，通过消息请求统计信息
- 支持书签管理，切换书签视图功能
- 支持注释管理，切换注释视图功能
- 添加跳转到行号命令，支持用户输入行号跳转
- 增加高级搜索命令，显示高级搜索界面
- 在webview中新增对书签、注释、高级搜索命令的响应处理
- 在package.json中注册上述所有命令及其激活事件

--- a/package.json
+++ b/package.json
@@ -28,6 +28,15 @@
   ],
   "activationEvents": [
     "onCommand:big-log-viewer.openLogFile",
+    "onCommand:big-log-viewer.deleteByTime",
+    "onCommand:big-log-viewer.deleteByLine",
+    "onCommand:big-log-viewer.refresh",
+    "onCommand:big-log-viewer.exportLogs",
+    "onCommand:big-log-viewer.showStatistics",
+    "onCommand:big-log-viewer.toggleBookmarks",
+    "onCommand:big-log-viewer.toggleComments",
+    "onCommand:big-log-viewer.jumpToLine",
+    "onCommand:big-log-viewer.showAdvancedSearch",
     "onLanguage:log"
   ],
   "main": "./out/extension.js",
@@ -46,6 +55,41 @@
       {
         "command": "big-log-viewer.deleteByLine",
         "title": "按行数删除日志",
+        "category": "日志查看器"
+      },
+      {
+        "command": "big-log-viewer.refresh",
+        "title": "刷新日志文件",
+        "category": "日志查看器"
+      },
+      {
+        "command": "big-log-viewer.exportLogs",
+        "title": "导出当前日志",
+        "category": "日志查看器"
+      },
+      {
+        "command": "big-log-viewer.showStatistics",
+        "title": "显示日志统计",
+        "category": "日志查看器"
+      },
+      {
+        "command": "big-log-viewer.toggleBookmarks",
+        "title": "书签管理",
+        "category": "日志查看器"
+      },
+      {
+        "command": "big-log-viewer.toggleComments",
+        "title": "注释管理",
+        "category": "日志查看器"
+      },
+      {
+        "command": "big-log-viewer.jumpToLine",
+        "title": "跳转到行号",
+        "category": "日志查看器"
+      },
+      {
+        "command": "big-log-viewer.showAdvancedSearch",
+        "title": "高级搜索",
         "category": "日志查看器"
       }
     ],
