增强日志查看器功能，新增设置面板以配置搜索防抖时间、折叠最小重复次数和时间线采样点数；优化搜索框功能，支持自动触发搜索并显示当前搜索命中的折叠日志条数；实现时间段级快捷过滤功能，提升用户体验。

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
-    "commands": [
+  "commands": [
       {
         "command": "big-log-viewer.openLogFile",
         "title": "打开大日志文件",
@@ -109,6 +109,30 @@
           "group": "navigation"
         }
       ]
+    },
+    "configuration": {
+      "title": "大日志文件查看器",
+      "properties": {
+        "big-log-viewer.search.debounceMs": {
+          "type": "number",
+          "default": 400,
+          "minimum": 0,
+          "description": "搜索框输入后自动触发搜索的防抖时间（毫秒）。"
+        },
+        "big-log-viewer.collapse.minRepeatCount": {
+          "type": "number",
+          "default": 2,
+          "minimum": 1,
+          "description": "折叠重复日志时，至少重复多少次才会被折叠。"
+        },
+        "big-log-viewer.timeline.samplePoints": {
+          "type": "number",
+          "default": 200,
+          "minimum": 20,
+          "maximum": 1000,
+          "description": "时间线采样点数量，数值越大越精细但计算时间越长。"
+        }
+      }
     }
   },
   "scripts": {
