--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
-  "commands": [
+    "commands": [
       {
         "command": "big-log-viewer.openLogFile",
         "title": "打开大日志文件",
@@ -153,10 +153,12 @@
     "@types/vscode": "^1.75.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.0",
-    "typescript": "^5.0.0",
     "@vscode/vsce": "^2.22.0",
-    "rimraf": "^5.0.0"
+    "eslint": "^8.0.0",
+    "rimraf": "^5.0.0",
+    "typescript": "^5.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@vscode/codicons": "^0.0.44"
+  }
 }
